[package]
name = "faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.30", default-features = false }
pin-project = { version = "1.1.5", default-features = false }
pinned-aliasable = "0.1.3"

[dev-dependencies]
tokio = { version = "1.39.2", default-features = false, features = [
    "macros",
    "rt",
    "time",
] }
